Fixed some bugs. Improved some methods.